Revisions to squash some bugs and other form/jquery fun.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3333,6 +3333,9 @@ button.dvs-no-decoration:hover {
 .dvs-admin-form-horizontal #dvs-fields-list select,
 .dvs-admin-form-horizontal #dvs-fields-list input[type=text] {
   width: 18%; }
+.dvs-admin-form-horizontal #dvs-fields-list .dvs-choices-list select,
+.dvs-admin-form-horizontal #dvs-fields-list .dvs-choices-list input[type=text] {
+  width: 26%; }
 
 .dvs-admin-form-horizontal #dvs-permissions {
   margin: 0 auto;
